--- a/index.html
+++ b/index.html
@@ -12,10 +12,20 @@
     <h1>testable-projects-fcc</h1>
     <header id="header">
       <img src="https://s3.amazonaws.com/freecodecamp/original_trombones.png" alt="picture" id="header-img">
-      
+      <nav id="nav-bar">
+        <a class="nav-link" href="#features">Features</a></li>
+        <a class="nav-link" href="#howitworks">How it Works</a></li>
+        <a class="nav-link"  href="#pricing">Pricing</a></li>
+
+
+      </nav>
     </header>
+    <section id="features">
+      <h1>Premuim Materials</h1>
+      <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.</p>
+    </section>
+    <section id="howitworks"></section>
+    <section id="pricing"></section>
     <script  src="js/index.js"></script>
   </body>
 </html>
-
-	
