i added video, form and email input

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <a class="nav-link"  href="#pricing">Pricing</a></li>
 
 
+
       </nav>
     </header>
     <section id="features">
@@ -26,6 +27,12 @@
     </section>
     <section id="howitworks"></section>
     <section id="pricing"></section>
+    
+    <video id="video" src="https://youtu.be/y8Yv4pnO7qc"></video>
+    <form id="form"  action="https://www.freecodecamp.com/email-submit">
+      <input type="text" id="email" name="email" required >
+    </form>
     <script  src="js/index.js"></script>
+
   </body>
 </html>
