added placeholder,and submit button

--- a/index.html
+++ b/index.html
@@ -27,12 +27,9 @@
     </section>
     <section id="howitworks"></section>
     <section id="pricing"></section>
-    
+
     <video id="video" src="https://youtu.be/y8Yv4pnO7qc"></video>
     <form id="form"  action="https://www.freecodecamp.com/email-submit">
-      <input type="text" id="email" name="email" required >
-    </form>
-    <script  src="js/index.js"></script>
-
-  </body>
+      <input type="email" id="email" name="email" required placeholder="Enter your email adress">
+      <input button type="submit" id="submit">
 </html>
