--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
-    <h1>testable-projects-fcc</h1>
+    
     <header id="header">
-      <img src="https://s3.amazonaws.com/freecodecamp/original_trombones.png" alt="picture" id="header-img">
+      <img width="300px" src="https://s3.amazonaws.com/freecodecamp/original_trombones.png" alt="picture" id="header-img">
       <nav id="nav-bar">
         <a class="nav-link" href="#features">Features</a></li>
         <a class="nav-link" href="#howitworks">How it Works</a></li>
@@ -21,6 +21,7 @@
 
       </nav>
     </header>
+    <h1 class="form-text">Handcrafted, home-made masterpieces</h1>
     <section id="features">
       <h1>Premuim Materials</h1>
       <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.</p>
