--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <section id="features">
       <h1>Premuim Materials</h1>
       <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.</p>
+      <p>i love my family</p>
     </section>
     <section id="howitworks"></section>
     <section id="pricing"></section>
